# banalize

./: .dockerignore  .env.docker  .gitignore  .prettierignore  .prototools  .turboignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.e2e.coverage.yml  docker-compose.e2e.yml  docker-compose.yml  generate-ips  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  turbo.json
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  docker.yml  lint.yml  pull-request.yml  test.yml
apps/api/: .env.template  .eslintrc.cjs  Dockerfile  README.md  jest.config.js  jest.config.ts  package.json  tsconfig.json
apps/api/src/: app.module.ts  di.ts  index.ts  main.ts  types.ts
apps/cli/: .eslintrc.cjs  README.md  package.json  tsconfig.json
apps/cli/src/: index.ts
apps/core/: Cargo.toml  Dockerfile  Dockerfile.coverage  README.md  build.rs  package.json  spec.md
apps/core/src/: api.rs  cleaner.rs  config.rs  config_manager.rs  database.rs  detector.rs  event_emitter.rs  events.rs  file_watcher.rs  firewall.rs  geoip.rs  grpc_server.rs  ip_extract.rs  ip_utils.rs  log_capture.rs  log_source.rs  main.rs  notifier.rs  restore.rs  store.rs  time_utils.rs  watcher.rs  watcher_manager.rs
apps/core/src/api/: bans.rs  configs.rs  events.rs  ip_infos.rs  ips.rs  logs.rs  matches.rs  meta.rs  mod.rs  models.rs  notifiers.rs  unbans.rs
apps/core/src/database/: core.rs  events.rs  mod.rs  sled_db.rs  sqlite_db.rs
apps/core/src/events/: emitter.rs  mod.rs  storage.rs
apps/core/tests/e2e/: main.rs  test_api_crud.rs  test_api_edge.rs  test_api_events.rs  test_ban.rs  test_chain_sanitization.rs  test_cleanup.rs  test_config_lifecycle_edge.rs  test_config_tail.rs  test_config_validation.rs  test_delete_config.rs  test_detection_edge.rs  test_expiry.rs  test_find_time.rs  test_firewall_error.rs  test_firewall_unban_error.rs  test_heavy_load.rs  test_ignore.rs  test_ignore_cidr.rs  test_ignore_edge.rs  test_init.rs  test_ip_infos.rs  test_ip_stats.rs  test_log_file_edge.rs  test_lookahead_regex.rs  test_match_events.rs  test_multi_config_chains.rs  test_multiple_ips.rs  test_no_duplicate_ban.rs  test_orphan_sweep.rs  test_reban.rs  test_restart_idempotent.rs  test_restore.rs  test_restore_expired.rs  test_restore_window.rs  test_threshold.rs  test_unban.rs  utils.rs
apps/e2e/: .gitignore  README.md  fixtures.ts  package.json  playwright.config.ts  start-servers.sh  tsconfig.json
apps/e2e/scripts/: core-coverage.sh
apps/e2e/utils/: api-client.ts  config.ts  coverage-global-setup.ts  coverage-global-teardown.ts  coverage.ts  log-injector.ts  utils.ts
apps/ui/: .eslintrc.cjs  Caddyfile  Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/: .env.template  Dockerfile  next.config.mjs  package.json  tsconfig.json  vite.config.ts
apps/web/app/: global.css  layout.tsx
apps/web/hooks/: useBans.tsx  useEvents.tsx  useNotifications.tsx
apps/web/lib/: api.ts  events.ts  events.tsx
apps/web/pages/: _app.tsx  index.tsx  (+2 more)
apps/web2/: .eslintrc.cjs  .stylelintrc.cjs  next.config.mjs  package.json  tsconfig.json
(+408 files in other folders)
