[package]
name = "banalize-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Database
sled = "0.34"

# Regex
regex = "1.10"

# Watchers
linemux = "0.3"

# Fast inter-thread communication
crossbeam-channel = "0.5"

# gRPC
tonic = "0.14"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# IP address handling
ipnet = "2.9"

# UUID generation for event IDs
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

